snapshots/care/data4life/hc-util-sdk-kmp/error/1.11.0-SNAPSHOT/error-1.11.0-20220426.120746-1-sources.jar.sha512
6bf37da8d39eda01a18593b98ff8a22f7e4b48e4364bb11156760f12e71a7c496df66ad043f1d9c88d72cc48eaa98e90f314ace15da22a4fee58635bff2c91fc